chore: add migrations
